змінив назви imeges

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Document</title>
 </head>
 <body>
@@ -12,9 +16,9 @@
         <nav>
             <a href="">WebStudio</a>
             <ul>
-                <li><a href=""></a>Студія</li>
-                <li><a href=""></a>Портфоліо</li>
-                <li><a href=""></a>Контакти</li>                
+                <li><a href="">Студія</a></li>
+                <li><a href="">Портфоліо</a></li>
+                <li><a href="">Контакти</a></li>                
             </ul>
         </nav>     
         <div>
@@ -29,7 +33,7 @@
         <div>
             <section>
                 <h1>Ефективні рішення для вашого бізнесу</h1>
-                <button>Замовити послугу</button>
+                <button type="button">Замовити послугу</button>
             </section>
         </div>
         <!--Переваги-->
@@ -70,10 +74,10 @@
                     <img src="imeges/img.jpg" alt="Руки печатают на клавіатурі" width="370">
                 </li>
                 <li>
-                    <img src="imeges/img (1).jpg" alt="Руки печатают на планшету" width="370">
+                    <img src="imeges/img(1).jpg" alt="Руки печатают на планшету" width="370">
                 </li>
                 <li>
-                    <img src="imeges/img (2).jpg" alt="Руки печатают на планшеті" width="370">
+                    <img src="imeges/img(2).jpg" alt="Руки печатают на планшеті" width="370">
                 </li>
             </ul>
         </section>
@@ -84,34 +88,37 @@
                 <li>
                     <h3>Ігор Дем'яненко</h3>
                     <p>Product Designer</p>
-                    <img src="imeges/img (3).jpg" alt="Ігор Дем'яненко" width="260">
+                    <img src="imeges/img(3).jpg" alt="Ігор Дем'яненко" width="260">
                 </li>
                 <li>
                     <h3>Ольга Рєпіна</h3>
                     <p>Frontend Developer</p>
-                    <img src="imeges/img (4).jpg" alt="Ольга Рєпіна" width="260">
+                    <img src="imeges/img(4).jpg" alt="Ольга Рєпіна" width="260">
                 </li>
                 <li>
                     <h3>Микола Тарасов</h3>
                     <p>Marketing</p>
-                    <img src="imeges/img (5).jpg" alt="Микола Тарасов" width="260">
+                    <img src="imeges/img(5).jpg" alt="Микола Тарасов" width="260">
                 </li>
                 <li>
                     <h3>Михайло Єрмаков</h3>
                     <p>UI Designer</p>
-                    <img src="imeges/img (6).jpg" alt="Михайло Єрмаков" width="260">
+                    <img src="imeges/img(6).jpg" alt="Михайло Єрмаков" width="260">
                 </li>
             </ul>
         </section>
     </main>
     <!--Футер-->
     <footer>
-        <h2>WebStudio</h2>
-        <address>м. Київ, пр-т Лесі Українки, 26</address>
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tell:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
+        <a href="">WebStudio</a>
+        <address>
+            <a href="">м. Київ, пр-т Лесі Українки, 26</a>
+            <ul>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tell:+380961111111">+38 096 111 11 11</a></li>
+            </ul>
+        </address>
+        
     </footer>
 </body>
 </html>
