--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <title>Document</title>
 </head>
@@ -14,26 +26,26 @@
     <!--Шапка навігації-->
     <header>
         <nav>
-            <a href="">WebStudio</a>
+            <a class="logo" href="">WebStudio</a>
             <ul>
-                <li><a href="">Студія</a></li>
-                <li><a href="">Портфоліо</a></li>
-                <li><a href="">Контакти</a></li>                
+                <li><a href="" class="link-site">Портфоліо</a></li>
+                <li><a href="" class="link-site">Студія</a></li>
+                <li><a href="" class="link-site">Контакти</a></li>                
             </ul>
         </nav>     
         <div>
             <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tell:+380961111111">+38 096 111 11 11</a></li>
+                <li><a href="mailto:info@devstudio.com" class="link-contact" >info@devstudio.com</a></li>
+                <li><a href="tell:+380961111111" class="link-contact">+38 096 111 11 11</a></li>
             </ul>
         </div>   
     </header>
     <!--Головний блок-->
      <main>
         <div>
-            <section>
-                <h1>Ефективні рішення для вашого бізнесу</h1>
-                <button type="button">Замовити послугу</button>
+            <section class="main-section">
+                <h1 class="main-title">Ефективні рішення для вашого бізнесу</h1>
+                <button type="button"> <span>Замовити послугу</span> </button>
             </section>
         </div>
         <!--Переваги-->
@@ -41,26 +53,26 @@
             <h2>Нащі переваги</h2>
             <ul>
                 <li>
-                    <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-                    <p>
+                    <h3 class="advantage">УВАГА ДО ДЕТАЛЕЙ</h3>
+                    <p class="adventege-text">
                         Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
                     </p>
                 </li>
                 <li>
-                    <h3>ПУНКТУАЛЬНІСТЬ</h3>
-                    <p>
+                    <h3 class="advantage">ПУНКТУАЛЬНІСТЬ</h3>
+                    <p class="adventege-text">
                         Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
                     </p>
                 </li>
                 <li>
-                    <h3>ПЛАНУВАННЯ</h3>
-                    <p>
+                    <h3 class="advantage">ПЛАНУВАННЯ</h3>
+                    <p class="adventege-text">
                         Так само консультація з широким активом значною мірою зумовлює.  
                     </p>
                 </li>
                 <li>
-                    <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                    <p>
+                    <h3 class="advantage">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                    <p class="adventege-text">
                         Значимість цих проблем настільки очевидна, що реалізація планових завдань.
                     </p>
                 </li>
@@ -68,7 +80,7 @@
         </section>
         <!--Чим ми займаємося-->
         <section>
-            <h2>Чим ми займаємося</h2>
+            <h2 class="work-title">Чим ми займаємося</h2>
             <ul>
                 <li>
                     <img src="imeges/img.jpg" alt="Руки печатают на клавіатурі" width="370">
@@ -83,26 +95,26 @@
         </section>
         <!--Наша команда-->
         <section>
-            <h2>Наша команда</h2>
+            <h2 class="team-title">Наша команда</h2>
             <ul>
                 <li>
-                    <h3>Ігор Дем'яненко</h3>
-                    <p>Product Designer</p>
+                    <h3 class="name">Ігор Дем'яненко</h3>
+                    <p class="name-work">Product Designer</p>
                     <img src="imeges/img(3).jpg" alt="Ігор Дем'яненко" width="260">
                 </li>
                 <li>
-                    <h3>Ольга Рєпіна</h3>
-                    <p>Frontend Developer</p>
+                    <h3 class="name">Ольга Рєпіна</h3>
+                    <p class="name-work">Frontend Developer</p>
                     <img src="imeges/img(4).jpg" alt="Ольга Рєпіна" width="260">
                 </li>
                 <li>
-                    <h3>Микола Тарасов</h3>
-                    <p>Marketing</p>
+                    <h3 class="name">Микола Тарасов</h3>
+                    <p class="name-work">Marketing</p>
                     <img src="imeges/img(5).jpg" alt="Микола Тарасов" width="260">
                 </li>
                 <li>
-                    <h3>Михайло Єрмаков</h3>
-                    <p>UI Designer</p>
+                    <h3 class="name">Михайло Єрмаков</h3>
+                    <p class="name-work">UI Designer</p>
                     <img src="imeges/img(6).jpg" alt="Михайло Єрмаков" width="260">
                 </li>
             </ul>
@@ -110,12 +122,12 @@
     </main>
     <!--Футер-->
     <footer>
-        <a href="">WebStudio</a>
+        <a href="" class="logo-footer" >WebStudio</a>
         <address>
-            <a href="">м. Київ, пр-т Лесі Українки, 26</a>
+            <a href="" class="adress-title" >м. Київ, пр-т Лесі Українки, 26</a>
             <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tell:+380961111111">+38 096 111 11 11</a></li>
+                <li><a href="mailto:info@devstudio.com" class="link-contact" >info@devstudio.com</a></li>
+                <li><a href="tell:+380961111111" class="link-contact" >+38 096 111 11 11</a></li>
             </ul>
         </address>
         
