--- a/potfolio.html
+++ b/potfolio.html
@@ -29,11 +29,11 @@
         <section>
             <h1>Нащі роботи</h1>
             <ul>
-                <li><button>Усі</button></li>
-                <li><button>Веб-сайти</button></li>
-                <li><button>Додатки</button></li>
-                <li><button>Дизайн</button></li>
-                <li><button>Маркетинг</button></li>
+                <li><button type="button">Усі</button></li>
+                <li><button type="button">Веб-сайти</button></li>
+                <li><button type="button">Додатки</button></li>
+                <li><button type="button">Дизайн</button></li>
+                <li><button type="button">Маркетинг</button></li>
             </ul>
             <!--приклади-->
             <ul>
@@ -113,12 +113,15 @@
         </section>
         <!--Футер-->
         <footer>
-            <h2>WebStudio</h2>
-            <address>м. Київ, пр-т Лесі Українки, 26</address>
-            <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tell:+380961111111">+38 096 111 11 11</a></li>
-            </ul>
+            <a href="">WebStudio</a>
+            <address>
+                <a href="">м. Київ, пр-т Лесі Українки, 26</a> 
+                <ul>
+                    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a href="tell:+380961111111">+38 096 111 11 11</a></li>
+                </ul>
+            </address>
+            
         </footer>
             
     </main>
