--- a/index.html
+++ b/index.html
@@ -6,19 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@700&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <title>Document</title>
 </head>
@@ -26,9 +14,9 @@
     <!--Шапка навігації-->
     <header>
         <nav>
-            <a class="logo" href="">WebStudio</a>
+            <a class="logo" href="./"> <span class="logo-text">Web</span>Studio</a>
             <ul>
-                <li><a href="" class="link-site">Портфоліо</a></li>
+                <li><a href="./potfolio.html" class="link-site">Портфоліо</a></li>
                 <li><a href="" class="link-site">Студія</a></li>
                 <li><a href="" class="link-site">Контакти</a></li>                
             </ul>
@@ -45,7 +33,7 @@
         <div>
             <section class="main-section">
                 <h1 class="main-title">Ефективні рішення для вашого бізнесу</h1>
-                <button type="button"> <span>Замовити послугу</span> </button>
+                <button class="button-main" type="button"> <span class="button-text">Замовити послугу</span> </button>
             </section>
         </div>
         <!--Переваги-->
@@ -122,7 +110,7 @@
     </main>
     <!--Футер-->
     <footer>
-        <a href="" class="logo-footer" >WebStudio</a>
+        <a href="" class="logo-footer" ><span class="logo-text">Web</span> Studio</a>
         <address>
             <a href="" class="adress-title" >м. Київ, пр-т Лесі Українки, 26</a>
             <ul>
