--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/700&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <title>Document</title>
 </head>
@@ -33,7 +33,7 @@
         <div>
             <section class="main-section">
                 <h1 class="main-title">Ефективні рішення для вашого бізнесу</h1>
-                <button class="button-main" type="button"> <span class="button-text">Замовити послугу</span> </button>
+                <button class="button-main" type="button"> Замовити послугу</button>
             </section>
         </div>
         <!--Переваги-->
@@ -110,7 +110,7 @@
     </main>
     <!--Футер-->
     <footer>
-        <a href="" class="logo-footer" ><span class="logo-text">Web</span> Studio</a>
+        <a href="./" class="logo-footer" ><span class="logo-text">Web</span> Studio</a>
         <address>
             <a href="" class="adress-title" >м. Київ, пр-т Лесі Українки, 26</a>
             <ul>
