--- a/potfolio.html
+++ b/potfolio.html
@@ -33,11 +33,11 @@
         <section>
             <h1>Нащі роботи</h1>
             <ul>
-                <li><button class="button-portfolio" type="button"> <span class="button-text-portfolio" >Веб-сайти</span> </button></li>
-                <li><button class="button-portfolio" type="button"> <span class="button-text-portfolio" >Усі</span> </button></li>
-                <li><button class="button-portfolio" type="button"> <span class="button-text-portfolio" >Додатки</span> </button></li>
-                <li><button class="button-portfolio" type="button"> <span class="button-text-portfolio" >Дизайн</span> </button></li>
-                <li><button class="button-portfolio" type="button"> <span class="button-text-portfolio" >Маркетинг</span> </button></li>
+                <li><button class="button-portfolio" type="button"> Веб-сайти </button></li>
+                <li><button class="button-portfolio" type="button"> Усі </button></li>
+                <li><button class="button-portfolio" type="button"> Додатки </button></li>
+                <li><button class="button-portfolio" type="button"> Дизайн </button></li>
+                <li><button class="button-portfolio" type="button"> Маркетинг </button></li>
             </ul>
             <!--приклади-->
             <ul>
@@ -117,7 +117,7 @@
         </section>
         <!--Футер-->
         <footer>
-        <a href="" class="logo-footer" ><span class="logo-text">Web</span> Studio</a>
+        <a href="./" class="logo-footer" ><span class="logo-text">Web</span> Studio</a>
         <address>
             <a href="" class="adress-title" >м. Київ, пр-т Лесі Українки, 26</a>
             <ul>
