--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/700&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link href="https: //fonts.googleapis.com/css2?family= Raleway :wght@700 &семья = Робото: вес @ 400; 700; 900 & display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <title>Document</title>
 </head>
@@ -114,8 +114,8 @@
         <address>
             <a href="" class="adress-title" >м. Київ, пр-т Лесі Українки, 26</a>
             <ul>
-                <li><a href="mailto:info@devstudio.com" class="link-contact" >info@devstudio.com</a></li>
-                <li><a href="tell:+380961111111" class="link-contact" >+38 096 111 11 11</a></li>
+                <li><a href="mailto:info@devstudio.com" class="foter-link-contact" >info@devstudio.com</a></li>
+                <li><a href="tell:+380961111111" class="foter-link-contact" >+38 096 111 11 11</a></li>
             </ul>
         </address>
         
