--- a/potfolio.html
+++ b/potfolio.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="css/styles.css" rel="stylesheet" >
     <link href="https://fonts.googleapis.com" rel="preconnect" >
     <link href="https://fonts.gstatic.com" rel="preconnect"  crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
-    <link href="css/styles.css" rel="stylesheet" href="css/styles.css">
-    <title>Document</title>
+    <title>Documents</title>
 </head>
+
     <body>
     <!--Шапка навігації-->
     <header>
