--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="css/styles.css" rel="stylesheet" >
     <link href="https://fonts.googleapis.com" rel="preconnect" >
     <link href="https://fonts.gstatic.com" rel="preconnect"  crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <title>Documents</title>
 </head>
 
@@ -17,8 +17,8 @@
         <nav>
             <a class="logo" href="./"> <span class="logo-text">Web</span>Studio</a>
             <ul>
+                <li><a href="" class="link-site-active">Студія</a></li>
                 <li><a href="./potfolio.html" class="link-site">Портфоліо</a></li>
-                <li><a href="" class="link-site">Студія</a></li>
                 <li><a href="" class="link-site">Контакти</a></li>                
             </ul>
         </nav>     
@@ -87,24 +87,24 @@
             <h2 class="team-title">Наша команда</h2>
             <ul>
                 <li>
+                    <img src="imeges/img(3).jpg" alt="Ігор Дем'яненко" width="260">
                     <h3 class="name">Ігор Дем'яненко</h3>
                     <p class="name-work">Product Designer</p>
-                    <img src="imeges/img(3).jpg" alt="Ігор Дем'яненко" width="260">
                 </li>
                 <li>
+                    <img src="imeges/img(4).jpg" alt="Ольга Рєпіна" width="260">
                     <h3 class="name">Ольга Рєпіна</h3>
                     <p class="name-work">Frontend Developer</p>
-                    <img src="imeges/img(4).jpg" alt="Ольга Рєпіна" width="260">
                 </li>
                 <li>
+                    <img src="imeges/img(5).jpg" alt="Микола Тарасов" width="260">
                     <h3 class="name">Микола Тарасов</h3>
                     <p class="name-work">Marketing</p>
-                    <img src="imeges/img(5).jpg" alt="Микола Тарасов" width="260">
                 </li>
                 <li>
+                    <img src="imeges/img(6).jpg" alt="Михайло Єрмаков" width="260">
                     <h3 class="name">Михайло Єрмаков</h3>
                     <p class="name-work">UI Designer</p>
-                    <img src="imeges/img(6).jpg" alt="Михайло Єрмаков" width="260">
                 </li>
             </ul>
         </section>
